fix control pokin
